# ToDo

./: CMakeLists.txt  Tasks.txt  main.cpp  sal.txt  todo
include/: ToDo.hpp  addButton.hpp  button.hpp  deleteButton.hpp  editButton.hpp  favoriteButton.hpp  file.hpp  functions.hpp  icon.hpp  isDoneButton.hpp  set.hpp  start.hpp  table.hpp  task.hpp  vector.hpp  windowDisplay.hpp
src/: Button.cpp  ToDo.cpp  a.out  addButton.cpp  deleteButton.cpp  editButton.cpp  favoriteButton.cpp  file.cpp  functions.cpp  icon.cpp  isDoneButton.cpp  main.cpp  output.txt  set.cpp  start.cpp  table.cpp  task.cpp  vector.cpp  windowDisplay.cpp
